<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="@string/merchant_information"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <TableRow
            android:layout_weight="1"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/view_profile_mobilenumber_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="aaaa"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/red" />

        <TableRow
            android:layout_weight="1"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/merchant_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/view_profile_merchantname_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="aaaa"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/red" />
        <TableRow
            android:layout_weight="1"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/branch_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/view_profile_branchname_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="aaaa"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/red" />
        <TableRow
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0.1dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/view_profile_emailid_text"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:text="chandras388@gmail.com"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@color/red" />
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/view_profile_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="6"
            android:background="@color/red"
            android:text="@string/close"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </TableLayout>

</LinearLayout>